Stop embed passwords.

--- a/cmd/launcher/Makefile
+++ b/cmd/launcher/Makefile
@@ -1,16 +1,13 @@
 build: launcher-linux launcher-darwin launcher-windows
 .PHONY: build
 
-secret.go:
-	bash generate-secret.sh
-
-launcher-%: secret.go .FORCE
+launcher-%: .FORCE
 	mkdir -p ../../build
 	GOOS=$* GOARCH=amd64 go build -o ../../build/launcher-$* ./
 .PHONY: launcher-%
 
 upload: build
-	gsutil cp ../../build/launcher-* gs://${UNAGI_PUBLIC_BUCKET}/bin/
+	gsutil cp ../../build/launcher-* gs://unagi2019-public/bin/
 .PHONY: upload
 
 .FORCE:
