Add initial files.

--- a/cmd/launcher/Makefile
+++ b/cmd/launcher/Makefile
@@ -1,13 +1,15 @@
-build: launcher-linux launcher-darwin launcher-windows
+build: build-linux build-darwin build-windows
 .PHONY: build
+upload: upload-linux upload-darwin upload-windows
+.PHONY: upload
 
-launcher-%: .FORCE
+build-%: .FORCE
 	mkdir -p ../../build
 	GOOS=$* GOARCH=amd64 go build -o ../../build/launcher-$* ./
-.PHONY: launcher-%
+.PHONY: build-%
 
-upload: build
-	gsutil cp ../../build/launcher-* gs://unagi2019-public/bin/
+upload-%: build-%
+	gsutil cp ../../build/launcher-$* gs://unagi2019-public/bin/
 .PHONY: upload
 
 .FORCE:
