--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Unagi"]
 
 [dependencies]
 futures = "0.1.16"
-grpcio = { version = "0.4.3", default-features = false, features = ["protobuf-codec"] }
-protobuf = "~2"
+grpcio = { version = "0.4.4", default-features = false, features = ["protobuf-codec"] }
+protobuf = "2.6.2"
 
 [build-dependencies]
-protoc-grpcio = "0.3.1"
+protoc-grpcio = "1.0.2"
