Fall back to unknown user.

--- a/go/cmd/launcher/Makefile
+++ b/go/cmd/launcher/Makefile
@@ -9,7 +9,7 @@ build-%: .FORCE
 .PHONY: build-%
 
 upload-%: build-%
-	gsutil cp ../../build/launcher-$* gs://icfpc-public-data/bin/
+	gsutil cp ../../../build/launcher-$* gs://icfpc-public-data/bin/
 .PHONY: upload
 
 .FORCE:
