--- a/wata/Cargo.toml
+++ b/wata/Cargo.toml
@@ -2,5 +2,7 @@
 name = "wata"
 version = "0.1.0"
 authors = ["Yoichi Iwata <yiwata@nii.ac.jp>"]
+edition = "2018"
 
 [dependencies]
+common = { path = "../common" }
