--- a/solution-check/package.json
+++ b/solution-check/package.json
@@ -1,15 +1,16 @@
 {
   "name": "solution-check",
   "version": "1.0.0",
-  "description": "",
   "main": "main.js",
   "dependencies": {
-    "jsdom": "^15.1.1"
+    "jsdom": "^15.1.1",
+    "canvas": "^2.5.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
